--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "nodemon": "^3.0.2",
-    "tailwindcss": "^3.4.1"
+    "nodemon": "^3.0.2"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
